--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -19,6 +19,7 @@
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.8",
     "com.unity.ugui": "2.0.0",
+    "com.unity.visualeffectgraph": "17.1.0",
     "com.unity.visualscripting": "1.9.7",
     "com.unity.xr.arcore": "6.1.1",
     "com.unity.xr.arfoundation": "6.1.1",
