Total feature complete for 1st round

--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -23,4 +23,5 @@
   <uses-permission android:name="com.oculus.permission.RENDER_MODEL" />
   <uses-permission android:name="com.oculus.permission.USE_SCENE" />
   <uses-permission android:name="com.oculus.permission.BOUNDARY_VISIBILITY" />
+  <uses-feature android:name="oculus.software.overlay_keyboard" android:required="false"/>
 </manifest>
